<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="oUX-iB-hBk">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.14"/>
    </dependencies>
    <scenes>
        <!--Navigation Controller-->
        <scene sceneID="PQh-VJ-iim">
            <objects>
                <navigationController id="oUX-iB-hBk" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Z2a-Xh-IcY">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="2az-XY-aVe"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="6UJ-iu-Hni" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-952" y="262"/>
        </scene>
        <!--Buttons!-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Buttons" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OvA-08-gWm">
                                <rect key="frame" x="285" y="84" width="30" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="30" id="0GU-mV-GCq"/>
                                    <constraint firstAttribute="height" constant="30" id="cHg-ZW-qfe"/>
                                </constraints>
                                <state key="normal" title="One"/>
                                <connections>
                                    <segue destination="wAx-aJ-0Qg" kind="show" id="Wl6-8J-gbA"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Md1-En-fF6">
                                <rect key="frame" x="285" y="204" width="30" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="30" id="JFs-S8-yBY"/>
                                    <constraint firstAttribute="height" constant="30" id="Mre-6r-9kU"/>
                                </constraints>
                                <state key="normal" title="Two"/>
                                <connections>
                                    <segue destination="uI7-Tu-BuF" kind="show" id="V55-2k-aiT"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="Md1-En-fF6" firstAttribute="top" secondItem="OvA-08-gWm" secondAttribute="bottom" constant="90" id="42h-EZ-X1m"/>
                            <constraint firstItem="Md1-En-fF6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="M6k-Al-Ayw"/>
                            <constraint firstItem="OvA-08-gWm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qu1-aa-kGp"/>
                            <constraint firstItem="OvA-08-gWm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="tLw-IJ-1Kr"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Buttons!" id="E1R-nQ-kPq"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-254" y="262"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="vvR-DQ-tLO">
            <objects>
                <viewController id="wAx-aJ-0Qg" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="dcR-9e-bdS"/>
                        <viewControllerLayoutGuide type="bottom" id="C7k-rh-JpO"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="j1f-D6-yYT">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dQa-ok-mMh">
                                <rect key="frame" x="252" y="110" width="97" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="A Text Field"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="duI-Kg-0zy"/>
                                    <constraint firstAttribute="width" constant="97" id="fGJ-aJ-YfS"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" red="0.80000001192092896" green="1" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="dQa-ok-mMh" firstAttribute="top" secondItem="dcR-9e-bdS" secondAttribute="bottom" constant="46" id="Vb5-gA-gLH"/>
                            <constraint firstItem="dQa-ok-mMh" firstAttribute="centerX" secondItem="j1f-D6-yYT" secondAttribute="centerX" id="mHL-KA-Y2w"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1jf-8c-oDf" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="401" y="96"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="TMG-qM-6V4">
            <objects>
                <viewController id="uI7-Tu-BuF" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Eyv-C0-HZu"/>
                        <viewControllerLayoutGuide type="bottom" id="arF-fd-H1A"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="7Ye-D1-KDR">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="BLUE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWU-ZL-g0t">
                                <rect key="frame" x="239" y="77" width="123" height="26"/>
                                <accessibility key="accessibilityConfiguration" identifier="Color Label"/>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="16"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="0.43529412150382996" blue="0.81176471710205078" alpha="1" colorSpace="calibratedRGB"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="jn0-k5-YZL" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="416" y="835"/>
        </scene>
    </scenes>
</document>
